<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MilestoneEBS5</string>
    <string name="filters_text_view">Filters</string>
    <dimen name="size_small">@dimen/_8sdp</dimen>
    <string name="add_to_cart_title_button">Add to cart</string>
    <string name="buy_now_title_button">Buy now</string>
    <string name="information_text_view">INFORMATION</string>
    <string name="favorites_text_view">Favorites</string>
    <string name="hint_check_internet">Check your internet connection</string>
    <string name="hint_general_error">An error occurred, please try again later</string>
    <string name="button_try_again">Try again</string>
    <string name="dollar">$%s,-</string>
    <string name="cart_text_view">cart</string>
    <string name="my_cart">MY CART</string>
    <string name="welcome_to_wow">Welcome to WOW!</string>
    <string name="login_to_begin">Login to begin adventure.</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="login_or">OR</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="filters">Filters</string>
    <string name="how_you_want_to_filter">How you want to filter</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="long_time_no_see_let_s_sign_in_to_get_started">Long time no see! Let`s sign in to get started</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_your_account">Sign up your account</string>
    <string name="hint_name_surname">Name, surname</string>
    <string name="password_strength">Password strength</string>
    <string name="sign_up">Sign Up</string>
    <string name="the_password_must_be_one_capital_letter_one_number_one_symbol_amp"><![CDATA[The password must be (one capital letter, one number, one symbol (@,$,%,&,#,)]]></string>
    <string name="create_a_password">Create a password</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="logout">Logout</string>
    <string name="sort_by">sort by</string>
    <string name="empty_cart">Пустная корзина</string>
    <string name="details">Details</string>
    <string name="products">Products</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="reset_filters">Reset filters</string>
    <string name="login_create_new_acc">CREATE NEW ACCOUNT</string>
    <string name="client_id">374470897477-i18r43ea2c66dlpkcnhgtiomqpr4rej2.apps.googleusercontent.com</string>
</resources>