<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_expandable">

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_croners"
        android:backgroundTint="@color/text_description_424A56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/labelImage"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:src="@drawable/ic_icon_filters"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:tint="@color/text_description_424A56" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:fontFamily="@font/open_sans_extrabold"
        android:textColor="@color/color_main_07195C"
        android:textSize="@dimen/text_size_14_ssp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@id/labelImage"
        app:layout_constraintBottom_toBottomOf="@id/labelImage"
        app:layout_constraintTop_toTopOf="@id/labelImage"/>

    <TextView
        android:id="@+id/filtersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/how_you_want_to_filter"
        android:textColor="@color/text_description_424A56"
        android:textSize="@dimen/text_size_small_11_ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelImage" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtersLabel"
        tools:listitem="@layout/text_item" />

</androidx.constraintlayout.widget.ConstraintLayout>