<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart.CartFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.top1shvetsvadim1.presentation.customView.ToolbarView
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:toolbarCenterImage="@drawable/ic_logo_toolbar"
            app:toolbarLeftImage="@drawable/ic_arrow_back"
            app:toolbarRightImage="@drawable/ic_favorites" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center"
            android:text="@string/cart_text_view"
            android:textAllCaps="true"
            android:textColor="@color/color_main_07195C"
            android:textSize="@dimen/_19ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivFilters"
            app:layout_constraintStart_toEndOf="@id/ivFilters"
            app:layout_constraintTop_toTopOf="@id/ivFilters" />

        <TextView
            android:id="@+id/tvListSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@drawable/raunded_textview"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            tools:text="4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/sort_by"
                android:textAllCaps="true"
                android:textColor="@color/color_main_07195C"
                android:textSize="@dimen/_9ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_6sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_sort_by" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/expandable_layout_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        tools:listitem="@layout/product_cart_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expandable_layout_0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:background="@drawable/bg_expandable"
        app:el_duration="700"
        app:el_expanded="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:textColor="@color/color_main_07195C"
                    android:text="@string/details"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="#424A56"
                    android:text="@string/products"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="#424A56"
                    tools:text="1999$"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="#424A56"
                    android:text="@string/delivery"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="#424A56"
                    tools:text="99$"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_9sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textColor="@color/color_main_07195C"
                    android:text="@string/total"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textColor="@color/color_main_07195C"
                    android:text="2299$"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textAllCaps="true" />
            </LinearLayout>

        </LinearLayout>

    </net.cachapa.expandablelayout.ExpandableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>